# span

./: .bandit  .codefactor.yml  .codespellrc  .env.example  .flake8  .gitignore  .gitmodules  .local_coverage_data  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .prettierignore  .prettierrc  .pylintrc  AGENTS.md  CHANGELOG.md  Feature Planning.md  Feature_Planning_Syn2_Advanced_Synthetic_Sensors.md  LICENSE  README.md  SPAN_Unique_Key_Compatibility.md  bess-grid-management.md  coverage.xml  debug_options_flow.py  developer.md  developer_attribute_readme.md  frontend.md  mypy.ini  prek.toml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements_test.txt  run_syn_debug_tests.sh  run_test_with_debug.sh  setup-hooks.sh  test_debug_panel_data.py  test_panel_level_detection.py  test_pattern_detection.py
.devcontainer/: devcontainer.json  fix-dns-order.sh  post-create.sh
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci-simulation-example.yml  ci.yml  dependabot-auto-approve.yml  hacs.yml  lint.yml  main.yml
.hooks/: pre-commit
custom_components/: __init__.py  phase_validation.py
custom_components/span_panel/: __init__.py  alert_dispatcher.py  binary_sensor.py  button.py  config_flow.py  config_flow_options.py  config_flow_validation.py  const.py  coordinator.py  current_monitor.py  diagnostics.py  energy_dip.py  entity.py  entity_id_naming_patterns.py  entity_migration.py  entity_resolver.py  entity_summary.py  exceptions.py  frontend.py  grace_period.py  graph_horizon.py  helpers.py  icons.json  id_builder.py  inverter.py  manifest.json  migration.py  migration_utils.py  migrations.py  options.py  phase_validation.py  schema_expectations.py  schema_validation.py  select.py  sensor.py  sensor_base.py  sensor_circuit.py  sensor_definitions.py  sensor_evse.py  sensor_panel.py  (+32 more)
custom_components/span_panel/config_flow_utils/: __init__.py  options.py  simulation.py  validation.py
custom_components/span_panel/frontend/: README.md
custom_components/span_panel/gen3/: __init__.py  binary_sensors.py  const.py  coordinator.py  sensors.py  span.protoset  span_grpc_client.py
custom_components/span_panel/sensors/: __init__.py  base.py  circuit.py  evse.py  factory.py  panel.py  solar.py
custom_components/span_panel/services/: __init__.py  cleanup_energy_spikes.py  main_meter_monitoring.py  (+1 more)
docs/: Synthetic_Sensor_Startup_Sequence.md  developer.md  developer_attribute_entity_renaming_migration.md  development.md  integration_boot_process.md  v1-legacy.md  version_2_migration_strategy.md  websocket-api.md
docs/dev/: Feature_Planning_Syn2_Advanced_Synthetic_Sensors.md  README.md  Synthetic_Sensor_Startup_Sequence.md  architecture.md  developer_attribute_entity_renaming_migration.md  dsm_state_migration_guide.md  dsm_state_removal_analysis.md  dynamic_enum_options.md  ebus_migration_architecture.md  energy_dip_compensation.md  entity_id_change_architecture.md  evse_span_drive_support.md  gen3-grpc-integration-plan.md  gen3-pr169-handoff.md  integration_boot_process.md  mqtt-sensor-topic.md  schema_driven_changes.md  simulation_based_testing_implementation.md  simulator_panel_clone.md  span_mqtt_broker_acl_bug.md  span_sensor_lifecycle_flowchart.dot  span_vs_span_hass_feature_gap.md  statistics_spike_cleanup_proposal.md  version_2_migration_strategy.md
docs/images/: .gitignore
images/: bess-topology-integrated.drawio  bess-topology-non-integrated.drawio
scripts/: README.md  build-frontend.sh  check-implementation.sh  check_migration_map.py  fix-markdown.sh  fix_energy_spike_statistics.py  generate_complete_config.py  generate_from_test.py  generate_yaml.sh  generate_yaml_from_templates.py  run-in-env.sh  run-mypy.sh  run-pylint.sh  run_mypy.py  sync-dependencies.py  sync-ha-deps.py  sync_translations.py
scripts/migration/: README_entity_registry_fix.md  check_migration_map.py  fix_entity_registry_naming.py  run_migration_check.sh  setup_core_to_1_0_10.sh
tests/: common.py  conftest.py  entity_id_renaming_README.md  entity_summary.py  factories.py  helpers.py  test_amperage_formula.py  test_basic_features.py  test_binary_sensor_platform.py  test_button.py  test_circuit_control.py  test_circuit_manifest_service.py  test_cleanup_energy_spikes.py  test_config_entry_options.py  test_config_flow_entity_naming.py  test_config_flow_simulator.py  test_config_flow_validation.py  test_configuration_edge_cases.py  test_coordinator.py  test_coordinator_migration_integration.py  test_current_monitor.py  test_current_monitor_options.py  test_current_monitor_services.py  test_diagnostics.py  test_door_sensor_integration.py  test_dps_and_bess.py  test_energy_dip_compensation.py  test_energy_sensor_integration.py  test_energy_sensor_recorder.py  test_entity_id_in_yaml.py  test_entity_id_migration.py  test_entity_id_naming_patterns.py  test_entity_migration.py  test_entity_naming_patterns.py  test_entity_summary.py  test_error_handling.py  test_evse_entities.py  test_factories.py  test_factory.py  test_favorites_service.py  (+65 more)
tests/docs/: README.md  simulation_test_documentation.md  version_2_migration_strategy.md
tests/fixtures/: circuit_numbers.yaml  expected_circuit_sensor_circuit_numbers.yaml  expected_panel_sensor_circuit_numbers.yaml  expected_panel_sensor_device_prefix.yaml  expected_panel_sensor_legacy.yaml  expected_panel_sensor_yaml.yaml  expected_solar_circuit_numbers.yaml  expected_solar_friendly.yaml  friendly_names.yaml  legacy_no_prefix.yaml  solar_dual_leg_legacy.yaml  solar_dual_leg_modern.yaml  solar_single_leg_modern.yaml  span-ha-synthetic-circuit-pattern.yaml  span-ha-synthetic-mixed-references.yaml  synthetic_config_multi_panel.yaml
tests/providers/: integration_data_provider.py
tests/scripts/: generate_migration_test_config.py  run_migration_test_suite.sh  test_collision_detection.py  test_migration_1_0_10_to_1_2_0.py  test_migration_1_0_4_to_1_2_0.py
tests/test_factories/: span_panel_simulation_factory.py
tests/utils/: generate_basic_sensor_fixtures.py  generate_solar_fixtures.py  integration_yaml_generator.py
(+41 files in other folders)
