[tool.poetry]
name = "span"
# integration version is managed in the manifest.json for HA
# version = "0.0.0"
description = "Span Panel Custom Integration for Home Assistant"
authors = ["SpanPanel"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13.2,<3.14"
httpx = "^0.28.1"
simpleeval = "^0.9.13" # Added simpleeval
span-panel-api = {path = "../span-panel-api", develop = true}
homeassistant = "^2025.6.0"
pytest-homeassistant-custom-component = "^0.13.251"

[tool.poetry.group.dev.dependencies]
homeassistant-stubs = "*"
types-requests = "*"
ruff = "^0.11.8"
mypy = ">=1.16.0"
pyright = "^1.1.390"
bandit = "^1.7.4"
pre-commit = "^4.2.0"
pydantic = ">=2.0.0,<3.0.0"
voluptuous = ">=0.15.2"
voluptuous-stubs = "^0.1.1"
python-direnv = "^0.2.2"
prettier = "^0.0.7"
black = "^24.0.0"
pytest = "^8.3.5"
pytest-homeassistant-custom-component = "^0.13.0"
homeassistant = "*"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.jscpd]
path = ["custom_components/span_panel", "./*.{html,md}"]
format = ["python", "javascript", "json", "markup", "markdown"]
ignore = "custom_components/span_panel/translations/**|**/translations/**|.github/**|env/**|**/site-packages/**|**/.direnv/**"
reporters = ["console"]
output = "./jscpdReport"
gitignore = true

[tool.mypy]
platform = "linux"
show_error_codes = true
follow_imports = "normal"

# Type checking settings
strict_equality = true
no_implicit_optional = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
local_partial_types = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
warn_return_any = true
strict_optional = true

# Package handling for HA custom integration
mypy_path = "."
namespace_packages = false
explicit_package_bases = false

# Module search paths - set this explicitly to prevent duplicate module resolution
files = ["custom_components/span_panel"]

# Exclude patterns
exclude = [
    "venv/.*",
    ".venv/.*",
    "scripts/.*"
]

# Error codes
enable_error_code = [
    "deprecated",
    "ignore-without-code",
    "redundant-self",
    "truthy-iterable",
    "mutable-override"
]
disable_error_code = [
    "annotation-unchecked",
    "import-not-found",
    "import-untyped",
    "override",
    "misc",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pyright]
include = ["custom_components/span_panel"]
exclude = [
    "venv",
    ".venv",
    "scripts"
]
pythonPlatform = "Linux"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
autoSearchPaths = true
reportMissingImports = "warning"
reportMissingTypeStubs = false

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "B007", # Loop control variable {name} not used within loop body
    "B014", # Exception handler is an `except` clause that only reraises
    "C",  # complexity
    "D",  # docstrings
    "E",  # pycodestyle
    "F",  # pyflakes/autoflake
    "ICN001", # import concentions; {name} should be imported as {asname}
    "PGH004",  # Use specific rule codes when using noqa
    "PLC0414", # Useless import alias. Import alias does not rename original package.
    "SIM105", # Use contextlib.suppress({exception}) instead of try-except-pass
    "SIM117", # Combine multiple with statements
    "SIM118", # Use {key} in {dict} instead of {key} in {dict}.keys()
    "SIM201", # Use {left} != {right} instead of not {left} == {right}
    "SIM212", # Use {a} if {a} else {b} instead of {b} if not {a} else {a}
    "SIM300", # Yoda conditions. Use 'age == 42' instead of '42 == age'.
    "SIM401", # Use get from dict with default instead of conditional assignment
    "T20",  # flake8-print
    "TRY004", # Prefer TypeError exception for invalid type
    "RUF006", # Store a reference to the return value of asyncio.create_task
    "UP",  # pyupgrade
    "W",  # pycodestyle
]

ignore = [
    "D202",  # No blank lines allowed after function docstring
    "D203",  # 1 blank line required before class docstring
    "D213",  # Multi-line docstring summary should start at the second line
    "D406",  # Section name should end with a newline
    "D407",  # Section name underlining
    "E501",  # line too long
    "E731",  # do not assign a lambda expression, use a def
]

# Per-file ignores for test and debug files
[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["T201", "D103", "D100"]  # Allow print statements and missing docstrings in test files
"debug_*.py" = ["T201", "D103", "D100"]  # Allow print statements and missing docstrings in debug files
"tests/**/*.py" = ["T201", "D103", "D100"]  # Allow print statements and missing docstrings in test directory

# Bandit configuration
[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B108"]  # Skip assert_used and hardcoded_tmp_directory for test files

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.black]
line-length = 88
target-version = ['py313']
exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | scripts
)/
'''

[tool.ruff.lint.isort]
known-first-party = ["custom_components", "span"]
force-sort-within-sections = true
combine-as-imports = true

[tool.coverage.run]
source = ["custom_components/span_panel"]
omit = ["tests/*"]
